[package]
name = "rust-auth-hyper"
version = "0.0.0"
authors = ["Mark Achee <mark@achee.com>"]
edition = "2018"

[dependencies]
bb8 = "0.4"
bb8-postgres = "0.4"
bytes = "0.5"
hyper = "0.13"
lazy_static = "1.4"
rand = "0.7"
regex = "1"
rust-argon2 = "0.8"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5"
